--- a/leistungen.html
+++ b/leistungen.html
@@ -2475,7 +2475,7 @@
       }
       .plus-kreis {
         position: absolute;
-        bottom: 40px; /* Noch weiter angehoben */
+        bottom: 38.5px; /* 1px nach unten verschoben */
         right: -7px;  /* Um 10px nach links verschoben */
         width: 50px;   /* Breite des Kreises */
         height: 50px;  /* Höhe des Kreises */
