--- a/leistungen.html
+++ b/leistungen.html
@@ -2424,6 +2424,11 @@
     const styleSheet = document.createElement("style");
     styleSheet.type = "text/css";
     styleSheet.innerText = `
+      /* Global: prevent any horizontal scrolling */
+      html, body {
+        overflow-x: hidden;
+      }
+
       .chronische-betreuung-bilder-container {
         display: flex;
         justify-content: space-around; /* Gleichmäßiger Abstand */
@@ -2521,7 +2526,7 @@
         display: flex;
         align-items: center;
         justify-content: flex-start; /* Text linksbündig */
-        padding-left: 30px; /* Abstand für den linksbündigen Text */
+        padding-left: 45px; /* Abstand für den linksbündigen Text */
         font-family: 'Poppins', sans-serif;
         font-size: 16px; /* Zurückgesetzt auf vorherige Größe */
         font-weight: 500; /* Medium */
@@ -2545,7 +2550,7 @@
         /* Linke Kante bündig mit visueller linker Kante von .plus-kreis */
         left: calc(100% - 30.5px);
         /* right: -20px; entfernt, da feste Breite gewünscht */
-        width: 240px; /* Feste Breite von 300px */
+        width: 280px; /* Feste Breite von 300px */
         border-radius: 25px; /* Starke Abrundung (Hälfte der Höhe) */
         pointer-events: none; /* Keine Interaktion, da rein dekorativ */
       }
